[package]
name = "memmap2"
version = "0.5.6"
license = "MIT/Apache-2.0"
repository = "https://github.com/ProgramAPE/memmap2_hugepage"
description = "A fork from https://github.com/RazrFalcon/memmap2-rs Cross-platform Rust API for memory-mapped file IO . add the hugepage support"
keywords = ["mmap", "memory-map", "io", "file"]
edition = "2018"

[dependencies]
stable_deref_trait = { version = "1.0", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
owning_ref = "0.4.1"
